--- a/Miwok-Starter/app/src/main/res/values/styles.xml
+++ b/Miwok-Starter/app/src/main/res/values/styles.xml
@@ -6,6 +6,11 @@
         <item name="colorPrimaryDark">@color/primary_dark_color</item>
     </style>
 
+    <style name="NumbersActivity" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/category_numbers</item>
+        <item name="colorPrimaryDark">@color/primary_dark_color</item>
+    </style>
+
     <!-- Style for a category of vocabulary words -->
     <style name="CategoryStyle">
         <item name="android:layout_width">match_parent</item>
